# envvars

./: Cargo.toml  build.rs
.github/workflows/: lint.yml
assets/: checksum.asset  filename.asset
extractor/: Cargo.toml
lib/: Cargo.toml  build.rs
scripts/: tasks.rb
scripts/env/: paths.rb
src/: error.rs  extractor.rs  lib.rs
src/profiles/: mod.rs  unix.rs  windows.rs
