[package]
name = "envvars"
version = "0.1.0"
edition = "2021"
authors = ["d.astafyev@outlook.com"]
build = "build.rs"

[lib]
name = "envvars"
path = "src/lib.rs"

[dependencies]
serde_json = "1.0.93"
log = "0.4"
home = "0.5.4"
lazy_static = "1.4.0"
thiserror = "1.0"
blake3 = "1.3"

[build-dependencies]
blake3 = "1.3"
uuid = { version = "1.3.0", features = ["v4"] }

[profile.release]
strip = true 
opt-level = "z"  # Optimize for size.